@@ -12,144 +12,151 @@ import org.jake.utils.JakeUtilsIterable;
 
 public abstract class JakeRepo {
 
-    public static MavenRepository maven(String url) {
-        return new MavenRepository(toUrl(url));
-    }
+	public static MavenRepository maven(String url) {
+		return new MavenRepository(toUrl(url));
+	}
 
-    public static MavenRepository maven(File file) {
-        return new MavenRepository(JakeUtilsFile.toUrl(file));
-    }
+	public static MavenRepository maven(File file) {
+		return new MavenRepository(JakeUtilsFile.toUrl(file));
+	}
 
-    public static JakeRepo mavenCentral() {
-        return maven(MavenRepository.MAVEN_CENTRAL_URL.toString());
-    }
+	public static JakeRepo mavenCentral() {
+		return maven(MavenRepository.MAVEN_CENTRAL_URL.toString());
+	}
 
-    public static JakeRepo mavenJCenter() {
-        return maven(MavenRepository.JCENTERL_URL.toString());
-    }
+	public static JakeRepo mavenJCenter() {
+		return maven(MavenRepository.JCENTERL_URL.toString());
+	}
 
-    public static JakeRepo.IvyRepository ivy(URL url) {
-        return new IvyRepository(url, null, null);
-    }
+	public static JakeRepo of(String url) {
+		if (url.toLowerCase().startsWith("ivy:")) {
+			return JakeRepo.ivy(url.substring(4));
+		}
+		return JakeRepo.maven(url);
+	}
 
-    public static JakeRepo.IvyRepository ivy(File file) {
-        try {
-            return ivy(file.toURI().toURL());
-        } catch (final MalformedURLException e) {
-            throw new IllegalArgumentException(e);
-        }
-    }
+	public static JakeRepo.IvyRepository ivy(URL url) {
+		return new IvyRepository(url, null, null);
+	}
 
-    public static JakeRepo.IvyRepository ivy(String url) {
-        try {
-            return ivy(new URL(url));
-        } catch (final MalformedURLException e) {
-            throw new IllegalArgumentException(e);
-        }
-    }
+	public static JakeRepo.IvyRepository ivy(File file) {
+		try {
+			return ivy(file.toURI().toURL());
+		} catch (final MalformedURLException e) {
+			throw new IllegalArgumentException(e);
+		}
+	}
 
-    private final URL url;
+	public static JakeRepo.IvyRepository ivy(String url) {
+		try {
+			return ivy(new URL(url));
+		} catch (final MalformedURLException e) {
+			throw new IllegalArgumentException(e);
+		}
+	}
 
-    private JakeRepo(URL url) {
-        this.url = url;
-    }
+	private final URL url;
 
-    public URL url() {
-        return url;
-    }
+	private JakeRepo(URL url) {
+		this.url = url;
+	}
 
-    @Override
-    public int hashCode() {
-        final int prime = 31;
-        int result = 1;
-        result = prime * result + ((url == null) ? 0 : url.hashCode());
-        return result;
-    }
+	public URL url() {
+		return url;
+	}
 
-    @Override
-    public boolean equals(Object obj) {
-        if (this == obj) {
-            return true;
-        }
-        if (obj == null) {
-            return false;
-        }
-        if (getClass() != obj.getClass()) {
-            return false;
-        }
-        final JakeRepo other = (JakeRepo) obj;
-        if (url == null) {
-            if (other.url != null) {
-                return false;
-            }
-        } else if (!url.equals(other.url)) {
-            return false;
-        }
-        return true;
-    }
+	@Override
+	public int hashCode() {
+		final int prime = 31;
+		int result = 1;
+		result = prime * result + ((url == null) ? 0 : url.hashCode());
+		return result;
+	}
 
-    @Override
-    public String toString() {
-        return this.getClass().getSimpleName() + "(" + url + ")";
-    }
+	@Override
+	public boolean equals(Object obj) {
+		if (this == obj) {
+			return true;
+		}
+		if (obj == null) {
+			return false;
+		}
+		if (getClass() != obj.getClass()) {
+			return false;
+		}
+		final JakeRepo other = (JakeRepo) obj;
+		if (url == null) {
+			if (other.url != null) {
+				return false;
+			}
+		} else if (!url.equals(other.url)) {
+			return false;
+		}
+		return true;
+	}
 
-    private static URL toUrl(String url) {
-        try {
-            return new URL(url);
-        } catch (final MalformedURLException e) {
-            throw new IllegalArgumentException(e);
-        }
-    }
+	@Override
+	public String toString() {
+		return this.getClass().getSimpleName() + "(" + url + ")";
+	}
 
-    public static final class MavenRepository extends JakeRepo {
+	private static URL toUrl(String url) {
+		try {
+			return new URL(url);
+		} catch (final MalformedURLException e) {
+			throw new IllegalArgumentException(e);
+		}
+	}
 
-        public static final URL MAVEN_CENTRAL_URL = toUrl("http://repo1.maven.org/maven2");
+	public static final class MavenRepository extends JakeRepo {
 
-        public static final URL JCENTERL_URL = toUrl("https://jcenter.bintray.com");
+		public static final URL MAVEN_CENTRAL_URL = toUrl("http://repo1.maven.org/maven2");
 
-        private MavenRepository(URL url) {
-            super(url);
-        }
+		public static final URL JCENTERL_URL = toUrl("https://jcenter.bintray.com");
 
-    }
+		private MavenRepository(URL url) {
+			super(url);
+		}
 
-    public static final class IvyRepository extends JakeRepo {
+	}
 
-        private final List<String> artifactPatterns;
+	public static final class IvyRepository extends JakeRepo {
 
-        private final List<String> ivyPatterns;
+		private final List<String> artifactPatterns;
 
-        private static final String DEFAULT_IVY_ARTIFACT_PATTERN = "[organisation]/[module]/[type]s/[artifact]-[revision].[ext]";
+		private final List<String> ivyPatterns;
 
-        private static final String DEFAULT_IVY_IVY_PATTERN = "[organisation]/[module]/ivy-[revision].xml";
+		private static final String DEFAULT_IVY_ARTIFACT_PATTERN = "[organisation]/[module]/[type]s/[artifact]-[revision].[ext]";
 
-        private IvyRepository(URL url, List<String> artifactPatterns, List<String> ivyPatterns) {
-            super(url);
-            this.artifactPatterns = artifactPatterns;
-            this.ivyPatterns = ivyPatterns;
-        }
+		private static final String DEFAULT_IVY_IVY_PATTERN = "[organisation]/[module]/ivy-[revision].xml";
 
-        public IvyRepository artifactPatterns(String ...patterns) {
-            return new IvyRepository(this.url(), Collections.unmodifiableList(Arrays.asList(patterns)), ivyPatterns);
-        }
+		private IvyRepository(URL url, List<String> artifactPatterns, List<String> ivyPatterns) {
+			super(url);
+			this.artifactPatterns = artifactPatterns;
+			this.ivyPatterns = ivyPatterns;
+		}
 
-        public IvyRepository ivyPatterns(String ...patterns) {
-            return new IvyRepository(this.url(), artifactPatterns, Collections.unmodifiableList(Arrays.asList(patterns)));
-        }
+		public IvyRepository artifactPatterns(String ...patterns) {
+			return new IvyRepository(this.url(), Collections.unmodifiableList(Arrays.asList(patterns)), ivyPatterns);
+		}
 
-        public List<String> artifactPatterns() {
-            if (this.artifactPatterns == null) {
-                return JakeUtilsIterable.listOf(DEFAULT_IVY_ARTIFACT_PATTERN);
-            }
-            return artifactPatterns;
-        }
+		public IvyRepository ivyPatterns(String ...patterns) {
+			return new IvyRepository(this.url(), artifactPatterns, Collections.unmodifiableList(Arrays.asList(patterns)));
+		}
 
-        public List<String> ivyPatterns() {
-            if (this.ivyPatterns == null) {
-                return JakeUtilsIterable.listOf(DEFAULT_IVY_IVY_PATTERN);
-            }
-            return ivyPatterns;
-        }
-    }
+		public List<String> artifactPatterns() {
+			if (this.artifactPatterns == null) {
+				return JakeUtilsIterable.listOf(DEFAULT_IVY_ARTIFACT_PATTERN);
+			}
+			return artifactPatterns;
+		}
+
+		public List<String> ivyPatterns() {
+			if (this.ivyPatterns == null) {
+				return JakeUtilsIterable.listOf(DEFAULT_IVY_IVY_PATTERN);
+			}
+			return ivyPatterns;
+		}
+	}
 
 }
